fix problem with modal on mobile

--- a/static/styles/_project-x.scss
+++ b/static/styles/_project-x.scss
@@ -154,6 +154,9 @@
   .unavailable-link {
     color: rgba(255, 255, 255, 0.338);
   }
+  .work__project-fullView--hide {
+    display: none;
+  }
 }
 @media screen and (min-width: 750px) {
   .project {
@@ -391,7 +394,6 @@
     width: 100%;
     height: 100%;
     top: 0;
-    display: none;
     z-index: 100;
 
     .layer {
@@ -422,7 +424,7 @@
       transform: translateX(-50%);
     }
   }
-  .work__project-fullView--activ {
-    display: block;
+  .work__project-fullView--hide {
+    display: none;
   }
 }
