--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -2665,6 +2665,9 @@
 .project .unavailable-link {
   color: rgba(255, 255, 255, 0.338);
 }
+.project .work__project-fullView--hide {
+  display: none;
+}
 
 @media screen and (min-width: 750px) {
   .project__header {
@@ -2866,7 +2869,6 @@
     width: 100%;
     height: 100%;
     top: 0;
-    display: none;
     z-index: 100;
   }
   .work__project-fullView .layer {
@@ -2896,8 +2898,8 @@
     left: 50%;
     transform: translateX(-50%);
   }
-  .work__project-fullView--activ {
-    display: block;
+  .work__project-fullView--hide {
+    display: none;
   }
 }
 @font-face {
